# RotorHazard-Class-Rank-Best-X-Laps-Cumulative

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml  rhfest.yaml
custom_plugins/class_rank_best_x_laps_consecutives/: __init__.py  manifest.json
