[project]
name = "rh-plugin-class-rank-best-x-laps-consecutives"
version = "1.0.0"
description = "A RotorHazard plugin that adds a 'Best X Laps (Consecutives)' class ranking method"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit-hooks==6.0.0",
  "prek==0.4.4",
  "ruff==0.15.16",
]

[tool.ruff]
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = [
  "ARG001",  # Unused function arguments
  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions

  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748
  "BLE001",  # False positives in some occasions
  "TRY003",  # Avoid specifying long messages outside the exception
  "EM101",   # Raw string in exception message

  # Conflicts with the Ruff formatter
  "COM812",

  # Custom ignores
  "G004",    # Allow f-string in logging
  "C901",    # Too complex - function has too many branches
  "PLR0912", # Too many branches
]
